<resources>
    <string name="app_name" translatable="false">Fruit Lines</string>
    <string name="title_activity_game_over" translatable="false">GameOverActivity</string>
    <string name="game_over" translatable="false">Game Over</string>
    <string name="try_again">Try again</string>
    <string name="home">Home</string>
    <string name="jouer_9x9">Play 9x9</string>
    <string name="jouer_7x7">Play 7x7</string>
    <string name="highscore9">Highscore 9x9 : %1$d</string>
    <string name="highscore7">Highscore 7x7 : %1$d</string>
    <string name="final_score">Final score : %1$d</string>
    <string name="new_best_score">New best score !</string>
    <string name="settingsbutton" translatable="false">Bouton settings</string>
    <string name="settings">Settings</string>
    <string name="new_fruits_per_move">New fruits per move</string>
    <string name="alignment_for_9x9_grid">Alignment for 9x9 grid</string>
    <string name="alignment_for_7x7_grid">Alignment for 7x7 grid</string>
    <string name="reset_highscores">Reset highscores</string>
    <string name="set_to_default">Set to default</string>
    <string name="highscore_reset">Highscore reseted</string>
    <string name="tile_not_empty">Tile is not empty</string>
    <string name="impossible_path">Impossible Path</string>
</resources>