<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/lava" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:text="@string/final_score"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/isbest"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="cursive"
        android:text="@string/new_best_score"
        android:textColor="#ffffff"
        android:textColorHighlight="@color/purple_200"
        android:textSize="22sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/gameoverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/game_over"
        android:textColor="#ffffff"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameoverText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/try_again"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/retry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/home"
        android:textColor="#ffffff"
        android:textSize="30sp" />

</RelativeLayout>